* Add flag send field
* Add mailbox field in electronic.mail tree view
* Add get_email_valid method in ElectronicMail class
* ElectronicEmail add template field. Default is False (if template module was installed, don't show templates)
* ElectronicEmail order by date DESC
* Rename Model name. Replace _ to . (dot)
* Add get_rec_name in ElectronicMail
* Review INSTALL documentation
* Test legal notice
* Add es_ES locale
* Review ca_ES locale
* Add ca_ES locale
* get_email: Remove base64 when reading data
* Add doc
* README and legal notice
* Initial release