@@ -7,3 +7,4 @@ include LICENSE
 include *.xml
 include locale/*.po
 include doc/*
+include icons/*
