@@ -4,7 +4,7 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
 <tryton>
   <data>
     <menuitem name="Email Management" sequence="10" 
-      id="menu_email_management" parent="res.menu_res"/>
+      id="menu_email_management"/>
 
     <record model="res.group" id="group_email_admin">
       <field name="name">Electronic Mail Administrator</field>
@@ -78,6 +78,11 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
     </record>
     <menuitem id="menu_mailbox" action="act_mailbox_form" 
       parent="menu_email_management"/>
+    <record model="ir.ui.menu-res.group"
+        id="menu_mailbox_group_email_admin">
+        <field name="menu" ref="menu_mailbox"/>
+        <field name="group" ref="group_email_admin"/>
+    </record>
 
     <record model="ir.ui.view" id="headers_view_tree">
       <field name="model">electronic.mail.header</field>
@@ -134,9 +139,11 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
           <label name="mailbox"/>
           <field name="mailbox"/>
         </group>
-        <group colspan="4" col="10" id="flags_area">
+        <group colspan="4" col="10" id="send_area">
           <label name="flag_send"/>
           <field name="flag_send"/>
+        </group>
+        <group colspan="4" col="10" id="flags_area">
           <label name="flag_seen"/>
           <field name="flag_seen"/>
           <label name="flag_flagged"/>
