@@ -1,3 +1,5 @@
+* Electronic Email Form View: flag group 
+* Usability: Email menu in top menu. Access user email group (not necessary admin group)
 * Add flag send field
 * Add mailbox field in electronic.mail tree view
 * Add get_email_valid method in ElectronicMail class
